# Watchtower-AI

./: .flaskenv  pyproject.toml  readme.md  video_detector.py
migrations/versions/: a3f2ceb774bc_.py  a43fe9efa189_.py
src/: main.py
src/config/: config.py
src/domains/auth/templates/auth/: login.html
src/domains/detect/: detector.py  forms.py  models.py  views.py
src/domains/detect/detector/: __init__.py  image_detector.py  video_detector.py
src/domains/detect/templates/detect/: base.html  detect_images.html  image_dashboard.html  image_detail.html  upload_images.html  upload_videos.html  video_dashboard.html  video_detail.html
src/domains/file/: views.py
src/domains/root/templates/root/: index.html
src/domains/user/: forms.py
src/domains/user/templates/user/: signup.html
src/root/: views.py
src/root/templates/root/: index.html
src/static/: style.css
src/templates/: 404.html  500.html  base.html
src/templates/security/: login_user.html  register_user.html
