[project]
name = "watchtower-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.0",
    "email-validator>=2.3.0",
    "eventlet>=0.40.4 ; sys_platform == 'win32'",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-security[common,fsqla]>=5.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "ultralytics>=8.3.235",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a33",
    "celery-types>=0.23.0",
]
